src/css/_components.scss
.full-screen {
    align-items: center;
    bottom: 0;
    display: flex;
    flex-direction: column;
    line-height: 1;
    justify-content: center;
    overflow: hidden;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
}

#preloader {
    &.is-hidden {
        opacity: 0;
        transition: opacity 0.2s linear, visibility 0.01s linear 0.21s;
        visibility: hidden;
    }
}

.intro {
    background: #f69c6a;
}

.card {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
    font-size: 15vw;
    transition: background ease 0.15s;
}

.card--black {
    background: black;
    color: #fff;
}

.card--blue {
    background: blue;
    color: #fff;
}

.card--brown {
    background: #8b4513;
    color: #fff;
}

.card--gold {
    background: gold;
}

.card--gray {
    background: grey;
}

.card--green {
    background: green;
    color: #fff;
}

.card--orange {
    background: #ff8c00;
}

.card--pink {
    background: #ff69b4;
    color: #fff;
}

.card--purple {
    background: #4b0082;
    color: #fff;
}

.card--red {
    background: red;
    color: #fff;
}

.card--white {
    background: white;
}

.card--yellow {
    background: yellow;
}

.keyboard-focus #next-color:focus {
    box-shadow: 0 0 20px #00bdbb inset;
}

.toggles {
    left: 10px;
    bottom: 10px;
    position: fixed;
}

.toggles__button {
    fill: #fff;
    margin-right: 10px;
    stroke: #000;
}

